--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 cycler==0.10.0
+graphviz==0.10.1
 kiwisolver==1.0.1
 matplotlib==3.0.2
 numpy==1.16.1
+pydotplus==2.0.2
 pyparsing==2.3.1
 python-dateutil==2.8.0
 scipy==1.2.1
