--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 cycler==0.10.0
-graphviz==0.10.1
 kiwisolver==1.0.1
 matplotlib==3.0.2
+mpmath==1.1.0
 numpy==1.16.1
-pydotplus==2.0.2
-pyparsing==2.3.1
+optlang==1.4.4
 python-dateutil==2.8.0
 scipy==1.2.1
 six==1.12.0
+swiglpk==4.65.0
+sympy==1.3
